# soc-agent

./: .gitignore  .pr_agent.toml  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  pr-agent.yml  request-promotion.yml
app/: __init__.py  agent_core_trace.py  config.py  coordination.py  graph_runtime.py  handoff_worker.py  lhp.py  main.py  mcp_runtime.py  socctl.py
app/agents/: __init__.py  assessments.py
app/cases/: __init__.py  models.py  policy.py  postgres.py  runtime.py  service.py  store.py  summaries.py  verifier.py
app/graph/: __init__.py  graph.py  nodes.py  routing.py  state.py
app/posture/: __init__.py  desired_state.py  governance.py  handoff.py  ledger.py  loop.py  scanner.py  verification.py
app/redteam/: __init__.py  active.py  attack_paths.py  exercise.py  models.py  policy.py  validators.py
app/tools/: __init__.py  mcp_client.py
config/: soc-agent.toml  soc-golden-state.json
docs/soc-agent/: architecture.md  case-schema.md  follow-ups.md  implementation-plan.md  posture-checks.md  redteam-safety-policy.md  rollout.md  security-scope.md
scripts/: test.sh
tests/: _fakes.py  conftest.py  test_agent_core_trace.py  test_case_summaries.py  test_config.py  test_coordination_v2.py  test_graph_routing.py  test_graph_runtime.py  test_lhp_contract_parity.py  test_lhp_endpoints.py  test_mcp_runtime.py  test_posture_desired_state.py  test_posture_governance.py  test_posture_handoff.py  test_posture_loop.py  test_posture_scanner.py  test_posture_verification.py  test_redteam_attack_paths.py  test_redteam_exercise.py  test_redteam_policy.py  test_redteam_validators.py  test_security_case_models.py  test_security_case_service.py  test_security_verifier.py
(+2 files in other folders)
