[project]
name = "soc-agent"
version = "0.1.0"
description = "AS215932 SOC agent — security governance loop (posture scanning + attack-path modeling → LHP-v1 handoff to the Engineering Loop). Read-only, human-gated, never an ungated production attacker."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-ai>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "mcp>=1.27.0",
    "structlog>=24.4",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-redis>=0.4.1",
    "redis>=5.2.1",
    "pyjwt[crypto]>=2.9",
    "agent-core",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
postgres = ["asyncpg>=0.30"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
soc-agent = "app.main:main"
socctl = "app.socctl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401", "RUF012"]
# Vendored verbatim from hyrule-noc-agent/app/cases/lhp.py to guarantee
# cross-loop wire-contract parity; do not lint-fix it (see tests/test_lhp_contract_parity.py).
"app/lhp.py" = ["E", "F", "RUF"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[tool.uv.sources]
agent-core = { git = "https://github.com/AS215932/agent-core", tag = "v0.5.0" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
